# ComputerGraphicsTraining

./: README.md
OpenGL/: CMakeLists.txt  main.cpp
OpenGL/shaders/: fs.glsl  vs.glsl
OpenGL/src/common/: common_values.h  scene_config.h
OpenGL/src/core/: camera.cpp  camera.h  gl_window.cpp  gl_window.h
OpenGL/src/lights/: directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
OpenGL/src/mesh/: mesh.cpp  mesh.h  model.cpp  model.h
OpenGL/src/renderer/: material.cpp  material.h  shader.cpp  shader.h  texture.cpp  texture.h
